@@ -4,7 +4,7 @@
 
 use strict;
 #use Test::More 'no_plan';
-use Test::More tests => 310;
+use Test::More tests => 312;
 
 my $CLASS;
 BEGIN {
@@ -539,8 +539,12 @@ is_deeply $fsa->notes, { test => 'foo', key => 'val', my => 'machine' },
   "... And passing in no arguments should return the complete notes hashref";
 $fsa->{should_not_exist_after_reset} = 1;
 $fsa->states('foo')->{should_not_exist_after_reset} = 1;
+
+# Try resetting.
+ok $fsa->done(1), "Set done to a true value";
 is_deeply $fsa->reset, $fsa, "... Calling reset() should return the machine";
 is_deeply $fsa, {}, "... it should be an empty hashref";
+is $fsa->done, undef, "... and 'done' should be reset to undef";
 is_deeply $fsa->states('foo'), {}, "... and the states should be empty, too";
 is $fsa->notes('key'), undef, '... And now passing in a key should return undef';
 is_deeply $fsa->notes, {}, "... and with no arguments, we should get an empty hash";
