@@ -1,6 +1,8 @@
 Revision history for Perl extension FSA::Rules.
 
 0.22
+      - Calling reset() now resets the "done" flag to undef unless "done"
+        is set to a code reference. Reported by Xavier Caron.
 
 0.21  2004-12-31T18:30:20
       - Calling reset() now empties the machine hashref and state hashrefs.
